@@ -1,7 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.2.34
 
-
+  *) Allow single-char field names inadvertantly disallowed in 2.2.32.
+     PR 61220. [Yann Ylavic]
 
 Changes with Apache 2.2.33
 
